content: restructure Java false sharing learning path
Reorganize the tutorial into a progressive workflow that explains false sharing, creates and inspects a baseline, identifies a hot cache line, applies contention padding, compares runtimes, and summarizes the result.

- Make FalseSharingDemo a baseline starter and document the complete dual-mode @Contended transformation with consistent Java paths, CPU affinity, and JVM flags.
- Expand JOL guidance for object headers, field alignment, padding offsets, object sizes, and the memory-footprint tradeoff.
- Add Arm Perf C2C version guidance, representative statistics, peer-snoop interpretation, top-line extraction, and labeled baseline-versus-padded report comparison.
- Add repeated alternating timing measurements and quantify the observed median runtime reduction while documenting sampling and attribution limitations.
- Add a conclusion covering the tested evidence, the effect of @Contended, and considerations for applying padding to real applications.
- Refresh metadata and keep the companion Java cache-line attribution Learning Path as the advanced follow-up.